feat: 座標表示機能を追加し、パーティクルシステムとの連携を強化

--- a/src/performance.html
+++ b/src/performance.html
@@ -480,6 +480,15 @@
           <span class="status-label">FPS:</span>
           <span id="particle-fps-status" class="status-value">--</span>
         </div>
+        <div style="margin-top: 0.75rem; padding-top: 0.75rem; border-top: 1px solid #444;">
+          <button id="show-coordinates-btn" style="padding: 0.35rem 1rem;">
+            <span id="coordinates-btn-text">Show Coordinates</span>
+          </button>
+          <div class="status-info" style="margin-top: 0.5rem;">
+            <span class="status-label">Coordinates:</span>
+            <span id="coordinates-status" class="status-value">Hidden</span>
+          </div>
+        </div>
       </div>
     </div>
 
