--- a/src/player.html
+++ b/src/player.html
@@ -566,7 +566,8 @@
             <!-- 現在演奏中 -->
             <div class="section-display current">
                 <div class="section-title">
-                    <span class="section-label">Now <span class="section-number" id="current-section-number">(1)</span></span>
+                    <span class="section-label">Now <span class="section-number"
+                            id="current-section-number">(1)</span></span>
                     <span class="section-name" id="current-section-name"></span>
                 </div>
 
@@ -593,7 +594,8 @@
             <!-- 次のセクション -->
             <div class="section-display next" id="next-section-display">
                 <div class="section-title">
-                    <span class="section-label">Next <span class="section-number" id="next-section-number">(2)</span></span>
+                    <span class="section-label">Next <span class="section-number"
+                            id="next-section-number">(2)</span></span>
                     <span class="section-name" id="next-section-name"></span>
                 </div>
 
