feat: プレイヤー画面のセクション遷移機能を改善し、デフォルト値を設定

--- a/src/controller.html
+++ b/src/controller.html
@@ -284,7 +284,8 @@
       </p>
     </div>
 
-    <div style="margin-bottom: 12px; padding: 12px; background: #e3f2fd; border: 1px solid #2196F3; border-radius: 4px;">
+    <div
+      style="margin-bottom: 12px; padding: 12px; background: #e3f2fd; border: 1px solid #2196F3; border-radius: 4px;">
       <strong style="color: #0d47a1;">🎼 Notation Event Test (composition.ts):</strong>
       <p style="margin: 8px 0; font-size: 13px; color: #0d47a1;">
         Test sending notation events from composition.ts to Player screens.<br>
