--- a/src/player.html
+++ b/src/player.html
@@ -586,16 +586,16 @@
                 <div class="performance-instructions">
                     <div class="instruction-group">
                         <div class="instruction-label">Articulation</div>
-                        <div class="instruction-value" id="current-articulation">staccato</div>
+                        <div class="instruction-value" id="current-articulation">--</div>
                     </div>
                     <div class="instruction-group">
                         <div class="instruction-label">Dynamics</div>
-                        <div class="instruction-value" id="current-dynamics">mf</div>
+                        <div class="instruction-value" id="current-dynamics">--</div>
                     </div>
                 </div>
 
                 <div class="interpretation-text" id="current-interpretation">
-                    "軽快に、リズムを強調して"
+                    --
                 </div>
             </div>
 
@@ -614,16 +614,16 @@
                 <div class="performance-instructions">
                     <div class="instruction-group">
                         <div class="instruction-label">Articulation</div>
-                        <div class="instruction-value" id="next-articulation">legato</div>
+                        <div class="instruction-value" id="next-articulation">staccato</div>
                     </div>
                     <div class="instruction-group">
                         <div class="instruction-label">Dynamics</div>
-                        <div class="instruction-value" id="next-dynamics">f (cresc.)</div>
+                        <div class="instruction-value" id="next-dynamics">mp</div>
                     </div>
                 </div>
 
                 <div class="interpretation-text" id="next-interpretation">
-                    "情熱的に、徐々に盛り上げる"
+                    none
                 </div>
             </div>
         </div>
