--- a/src/visualizer.html
+++ b/src/visualizer.html
@@ -25,6 +25,17 @@
       border: 2px solid #333;
     }
 
+    #pulse-overlay {
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at center, rgba(255, 255, 255, 0.6) 0%, rgba(255, 255, 255, 0.15) 35%, rgba(255, 255, 255, 0) 70%);
+      opacity: 0;
+      pointer-events: none;
+      mix-blend-mode: screen;
+      transition: opacity 0.08s linear;
+      z-index: 5;
+    }
+
     #p5-canvas {
       position: absolute;
       top: 0;
@@ -45,6 +56,7 @@
   <div id="visualizer-container">
     <!-- p5.js描画用 -->
     <!-- Three.js描画用 -->
+    <div id="pulse-overlay"></div>
     <canvas id="three-canvas"></canvas>
   </div>
   <script type="module" src="visualizer.ts"></script>
