fix: 修正されたインデントでパフォーマンスページとビジュアライザーのコードを整形

--- a/src/performance.html
+++ b/src/performance.html
@@ -577,7 +577,8 @@
           <label>Left (%)<input type="number" id="perf-crop-left" value="0" min="0" max="100" step="0.1" /></label>
           <label>Top (%)<input type="number" id="perf-crop-top" value="0" min="0" max="100" step="0.1" /></label>
           <label>Right (%)<input type="number" id="perf-crop-right" value="100" min="0" max="100" step="0.1" /></label>
-          <label>Bottom (%)<input type="number" id="perf-crop-bottom" value="100" min="0" max="100" step="0.1" /></label>
+          <label>Bottom (%)<input type="number" id="perf-crop-bottom" value="100" min="0" max="100"
+              step="0.1" /></label>
         </div>
         <div class="visual-crop-toggles">
           <label><input type="checkbox" id="perf-crop-enabled" /> Enable crop</label>
@@ -585,7 +586,8 @@
         </div>
         <div class="visual-crop-options">
           <label>Frame color <input type="color" id="perf-crop-frame-color" value="#ffffff" /></label>
-          <label>Frame width (px) <input type="number" id="perf-crop-frame-width" value="4" min="0" max="50" step="1" /></label>
+          <label>Frame width (px) <input type="number" id="perf-crop-frame-width" value="4" min="0" max="50"
+              step="1" /></label>
           <label>Scale mode
             <select id="perf-crop-scale-mode">
               <option value="contain" selected>Contain (letterbox)</option>
